--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
