--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -32,17 +32,24 @@ repositories {
 
 
 dependencies {
+
     wearApp project(':wear')
+
+//    implementation 'com.google.android.gms:play-services-wearable:+'
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.google.android.gms:play-services-wearable:+'
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     testImplementation 'junit:junit:4.12'
+
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'io.reactivex.rxjava2:rxjava:2.0.5'
 }
